# PlotterIPN

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resouces.qrc
tests/: CMakeLists.txt  test_clearChart.cpp  test_fft.cpp
